--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/breeze": "^1.26",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "spatie/browsershot": "^3.60"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
